1) Одно ЗИ для нескольких проектов